src/objects/Supply__c.object
<CustomObject>
    <fields>
        <fullName>Battle_Station__c</fullName>
        <label>Battle Station</label>
        <referenceTo>Battle_Station__c</referenceTo>
        <relationshipLabel>Supplies</relationshipLabel>
        <relationshipName>Supplies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Quantity__c * Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Supply</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>